ASSERTION FAILED: willBeComposited == needsToBeComposited(layer) in WebCore::RenderLayerCompositor::computeCompositingRequirements https://bugs.webkit.org/show_bug.cgi?id=151097 <rdar://problem/27711678>

Reviewed by Simon Fraser.

Source/WebCore:

This patch ensures that when will-change property triggers stacking context, we make the associated layer a non-normal flow layer.
(This is similar to what any other stacking context-triggering CSS property does.)

Test: compositing/assert-on-will-change-transform-with-composited-descendant.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects):

LayoutTests:

* compositing/assert-on-will-change-transform-with-composited-descendant-expected.txt: Added.
* compositing/assert-on-will-change-transform-with-composited-descendant.html: Added.


Canonical link: https://commits.webkit.org/180174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205999 268f45cc-cd09-0410-ab3c-d52691b4dbfc